app/assets/stylesheets/welcome.css.scss
$categories: (illustrator, sass, css, git, resources);
$category-colors: (#ff9800, #c6538c, #00acc1, #9c27b0, #8bc34a);

@for $i from 1 through 5 {
    .article.#{nth($categories, $i)}, .#{nth($categories, $i)} .detail-article, .other-posts-content.#{nth($categories, $i)} .article {
    	a {
    		color: nth($category-colors, $i);
    	}

    	h2 a, h1 {
    		color: black;
    		text-transform: uppercase;
    	}

		.ratings-view:hover:not(.rated) {
			color: nth($category-colors, $i) !important;
		}
    }

    .article.#{nth($categories, $i)} {
    	border-top: 5px solid nth($category-colors, $i) !important;
    }

    #filters .#{nth($categories, $i)} {
    	&:hover, &.active {
    		background: nth($category-colors, $i) !important;
    	}
    }
}

// Place all the styles related to the welcome controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
	background-color: #EFEEEA;
}

#index-view, #detail-view {
	margin-top: 70px;
}

// Article with Modified Wookmark Plugin CSS

.collection-container {
	position: relative; /** Needed to ensure items are laid out relative to this container **/
	margin: 15px;
	padding: 0;
}

.collection-container .article {
  width: 200px;
  background-color: #ffffff;
  border: 2px solid #CCCCCC;
  border-top: 5px solid #00ACC1;
          border-radius: 2px;
     -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  display: none;
  cursor: pointer;
  padding: 4px;
}

// Filters & Animation

.collection-container .article {
  -webkit-transition: all 0.3s ease-out;
     -moz-transition: all 0.3s ease-out;
       -o-transition: all 0.3s ease-out;
          transition: all 0.3s ease-out;
}

.filter-control {
	height: 50px;
	background-color: black;
	margin: 20px 25px 0px 25px;
	border-radius: 5px;
}

#search-bar {
	width: 30%;
	display: inline-block;

	.input-group {
		margin-top: -41px;
		padding-right: 4px;
	}
}

#filters {
  list-style-type: none;
  text-align: center;
  margin: 0 2%;
  padding-left: 0;
  width: 65%;
  height: 50px;
  display: inline-block;
}

#filters li {
  color: whitesmoke;
  font-size: 12px;
  float: left;
  padding: 6px 0 4px 0;
  cursor: pointer;
  margin: 12px 1% 0 1%;
  width: 15%;
  -webkit-transition: all 0.15s ease-out;
     -moz-transition: all 0.15s ease-out;
       -o-transition: all 0.15s ease-out;
          transition: all 0.15s ease-out;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
}

@media screen and (max-width: 768px) {
	.filter-control {
		height: 100px;
	}

	#filters {
		width: 100%;
		margin: 0 5%;

		li {
			width: 15%;
		}
	}

    #search-bar {
		width: 100%;

		.input-group {
			margin-top: 0px;
			padding: 0 10px;
		}
	}
}

#filters li:hover {
  background: #00ACC1;
  color: #ffffff;
}

#filters li.active {
  background: #00ACC1;
  color: #ffffff;
}

.collection-container .article.inactive {
  visibility: visible;
  opacity: .2;
  filter: alpha(opacity=20); /* IE 7 and Earlier */
  /* Next 2 lines IE8 */
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);

  pointer-events: none;
  cursor: default;
}

// All articles

.article-content {
	background-color: white;
	padding: 15px;

	h2 {
		font-size: 20px;
	}
}

.image {
	width: 100%;
	margin-top: 10px;
}

.text {
	margin: 10px 0 30px 0;
	font-size: 12px;
}

.date {
	float: left;
	padding: 0;
	text-align: left;
	color: #666666;
	font-size: 11px;
}

.ranking {
	float: right;
	padding: 0;
	text-align: right;
	margin-top: -2px;

	.ratings-view:hover:not(.rated) {
		color: teal;
	}
}
.date-ranking-part {
	margin: 10px 0;
}

// Featured container

.featured-container {
	margin: 25px;
}

.featured-container .article {
	border: 2px solid #CCCCCC;
	padding: 15px;
	background-color: white;

	h2 {
		font-size: 26px;
	}

	.featured-image {
		width: 100%;
		height: 200px;
		display: block;
		background-repeat: no-repeat;
		background-position: center;
	}
}

// Article Detail

.detail-article {
	margin-bottom: 30px;
}

.detail-article-content {
	background-color: white;
	border: 2px solid #CCCCCC;
	padding: 15px;

	.link {
		float: left;
		padding: 0;
	}

	h4 {
		text-transform: uppercase;
	}
}

.detail-date-ranking-part {
	margin: 10px 0 20px 0;
	text-align: left;

	.date {
		margin-right: 10px;
	}

	.ranking {
		float: left;
		padding-left: 0;
		text-align: left;
		margin-top: -2px;
	}
}

.rate {
	margin: 50px 0 30px 0;

	.ranking {
		float: left;
		text-align: left;
	}
}

.other-posts {
	float: right;
	padding-left: 0;
	margin-bottom: 15px;
}

.other-posts-content {
	background-color: white;
	border: 2px solid #CCCCCC;
	padding: 15px;

	h3 {
		font-size: 20px;
	}

	.article { 
		padding-bottom: 10px;
		min-height: 100px;

		&:not(:last-child) {
			border-bottom: 1px solid lightgrey;
		}

		h2 {
			font-size: 16px;
		}
	}
}

@media screen and (max-width: 768px) { 
	.detail-article {
		margin-bottom: 15px;
	}

	.other-posts {
		padding-left: 15px;
	}
}

// Create Article

.new_article {
	margin: 0 25%;
	background-color: white;
	border: 2px solid #CCCCCC;
	padding: 15px;
}

form {
	width: 100%;
}

input, textarea {
	width: 100%;
	margin-bottom: 10px;
}

.about-view {
	h3 {
		margin-top: 30px;
	}

	.other-posts-content {
		img {
			width: 100%;
		}
	}
}

